# SemaFuzz

./: README.md  build.sh
AFLplusplus/: GNUmakefile  GNUmakefile.gcc_plugin  GNUmakefile.llvm
AFLplusplus/include/: config.h
AFLplusplus/instrumentation/: SanitizerCoveragePCGUARD.so.cc  afl-compiler-rt.o.c
AFLplusplus/src/: afl-fuzz-init.c  afl-fuzz-one.c  afl-fuzz-queue.c  afl-fuzz.c
Benchmarks/: buildbenchs.sh  runAllFuzz.sh  runCorpus.sh  runStaticSem.sh
Benchmarks/arrow/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/avconv/: Makefile  build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/exiv2/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/json/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/libpng/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/libxml2/: build.sh  func_cov.txt  project.yaml  rm_dot_json.sh  runFuzz.sh  seeds.tar
Benchmarks/mdp/: build.sh  mdp.tar  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/mp3gain/: build.sh  mp3gen.py  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/mp4v2/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/pycdc/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/sablotron/: build.sh  project.yaml  runFuzz.sh  seeds.tar
Benchmarks/xpdf/: build.sh  (+4 more)
Common/: .gitignore  makefile
Experiments/: autorun.sh  runDocker.sh  startLLMServer.sh
SVF/: build.sh
Tests/: runtest-semsum-inex.sh
Tools/: buildllvm14.sh  buildtools.sh  delshm.sh
Tools/SymRun/: CMakeLists.txt  build.sh  main.cpp  sym_debug.h  sym_run.cpp  sym_run.h  sym_svfcore.h
(+563 files in other folders)
